[package]
name = "rust_auth_api"
version = "0.1.0"
authors = ["Pratik Gorade <pratikgorade0@gmail.com>"]
edition = "2018"
description = "exmple register and login api with actix and in memory user database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bcrypt = "0.4.0"
actix-web = "3"
serde = "1"
lazy_static = "1"
